--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "prisma generate --schema=./model/prisma/schema.prisma tsc",
-		"start": "node ./dist/src/index.js",
+		"start": "node .dist/src/index.js",
 		"prisma-deploy": "npx prisma migrate deploy --schema=./model/prisma/schema.prisma",
 		"server": "nodemon ./src/index.ts",
 		"lint": "eslint --ext .ts --fix src",
