--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
 		"pg": "^8.10.0",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.0.2"
+		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
@@ -40,6 +39,7 @@
 		"dotenv": "^16.0.3",
 		"eslint": "^8.36.0",
 		"nodemon": "^2.0.22",
-		"prisma": "^4.13.0"
+		"prisma": "^4.13.0",
+		"typescript": "^5.0.4"
 	}
 }
