--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"postinstall": "npm run prisma-generate npm run prisma-deploy",
-		"build": "tsc",
+		"build": "npm run prisma-generate && npm run prisma-deploy && tsc",
 		"start": "node ./src/index.js",
-		"server": "nodemon ./src/index.ts",
+		"dev": "nodemon ./src/index.ts",
 		"prisma-generate": "npx prisma generate --schema=./model/prisma/schema.prisma",
 		"prisma-deploy": "npx prisma migrate deploy --schema=./model/prisma/schema.prisma",
 		"prisma-migrate": "npx prisma migrate dev --schema=./model/prisma/schema.prisma",
@@ -25,7 +24,6 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
-		"pg": "^8.10.0",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
@@ -35,7 +33,6 @@
 		"@types/express": "^4.17.17",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.9",
-		"@types/pg": "^8.6.6",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
 		"eslint": "^8.36.0",
