--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.0",
-		"ts-node": "^10.9.1"
+		"ts-node": "^10.9.1",
+		"toad-scheduler": "^3.0.0"
 	},
 	"devDependencies": {
 		"@jest/globals": "^29.5.0",
